# 01-AI-ENGG

./: Dockerfile.streamlit  README.md  docker-compose.yaml  env.example  main.py  pyproject.toml
notebooks/week1/: 01-llm-apis.ipynb
src/api/: app.py
src/chatbot_ui/: app.py
src/chatbot_ui/core/: config.py
