[project]
name = "01-ai-engg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-genai>=1.41.0",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "openai>=2.1.0",
    "pandas==2.2.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
